--- a/rails/sample_app/Gemfile
+++ b/rails/sample_app/Gemfile
@@ -32,7 +32,16 @@ group :doc do
   gem 'sdoc', require: false
 end
 
- gem 'rspec-rails', '2.13.1'
+ gem 'rspec-rails', '~> 3.7'
+
+ gem 'rake', '12.3.1'
+
+ group :test do
+   gem 'selenium-webdriver', '2.0.0'
+   gem 'capybara', '2.2.0'
+ end
+ gem 'zip'
+ gem 'test-unit'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
