--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ rails/blog/.idea/inspectionProfiles/Project_Default.xml
 .idea/rubyPraticse.iml
 .idea/vcs.xml
 .idea/workspace.xml
+rails/master_rails_by_actions/Gemfile.lock
+rails/master_rails_by_actions/.idea/.generators
